--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,6 +1,5 @@
 /! Navbar
-nav.navbar.navbar-expand-lg.navbar-light.bg-light
-nav id="header" class="navbar navbar-expand-lg navbar-light bg-light bg-light"
+nav#header.navbar.navbar-expand-lg.navbar-light.bg-light
   /! Container wrapper
   .container
     /! Navbar brand
