--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,9 @@
 doctype html
 html
   head
-    title
-      | IAmHere
-    meta[name="viewport" content="width=device-width,initial-scale=1"]
+    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
+    title IAmHere
+    meta content="width=device-width,initial-scale=1" name="viewport" /
     = csrf_meta_tags
     = csp_meta_tag
 
@@ -13,6 +13,8 @@ html
     link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" /
     /! MDB
     link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css" rel="stylesheet" /
+    /! MDB
+    / script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.js" type="text/javascript" 
 
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
